--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Kevin Benavides <https://github.com/DevCheckOG>"]
 homepage = "https://github.com/thrushlang/lld-wrapper"
 repository = "https://github.com/thrushlang/lld-wrapper"
 edition = "2024"
+rust-version = "1.85.0"
 
 [build-dependencies]
 libc = "0.2.174"
